# Harnessing-the-Power-of-Reinforcement-Learning-for-Adaptive-MCMC

./: .gitignore  README.md  modules.html  objects.inv  py-modindex.html  pyproject.toml  pyrlmala.envs.html  pyrlmala.html  test_parallel_env.ipynb  test_pretrain_q.ipynb
_sources/: examples.rst.txt  pyrlmala.config.rst.txt
config/: actor.toml  critic.toml  ddpg.toml  runtime.toml  td3.toml
demo/annulus/: annulus.json  annulus.stan
demo/annulus_gaussian_mixture/: annulus_gaussian_mixture.ipynb  annulus_gaussian_mixture.json
demo/banana/: banana.ipynb  banana.stan  banana_table.ipynb  save_data_fixed.ipynb  save_gs.ipynb
demo/banana_rotation/: banana_rotation.json  banana_rotation.stan
demo/cone/: cone.json  cone.stan
demo/crazy_density/: crazy_density.json  crazy_density.py  crazy_density.stan  test_crazy_density.py
demo/gaussian_mixture/: gaussian_mixture.json  gaussian_mixture.stan
demo/laplace/: laplace.ipynb  laplace.json  laplace.stan
demo/multivariant_normal/: multivariant_normal.json  multivariant_normal.stan
demo/neals_funnel/: neals_funnel.ipynb  neals_funnel.stan
demo/rosenbrock/: rosenbrock.json  rosenbrock.stan
demo/skew_t/: skew_t.json  skew_t.stan
docs/source/: conf.py  index.rst  pyrlmala.agent.actor.rst  pyrlmala.agent.critic.rst  pyrlmala.agent.rst  pyrlmala.config.rst  pyrlmala.envs.rst  pyrlmala.learning.rst  pyrlmala.rst  pyrlmala.utils.rst
experiments/: batch_run_pdb.py  export_to_markdown.py  export_to_tex.py  generate_batch_pdb.py  generate_const.py  generate_sensitivity.py  laplace.ipynb  plot_compare.py  plot_policy.py  run-generate_batch_pdb.sh  run-generate_sensitivity.sh  submit_all.sh  submit_baseline.sh  submit_baseline_barker.sh  submit_baseline_esjd.sh  submit_batch_pdb.sh  submit_const.sh  submit_failed.sh  submit_search.sh  submit_sensitivity.sh  submit_step_size.sh  submit_whole_results.sh
experiments/annulus/: annulus_flex_mala.ipynb  flex_run.py
experiments/banana/: banana_flex_barker.ipynb  banana_flex_barker_esjd.ipynb  banana_flex_mala.ipynb  flex_run.py  test-banana-test-banana_mala_mmd.txt
experiments/baseline/: generate_all.py
experiments/baseline_barker/: generate_all.py
experiments/baseline_esjd/: generate_all.py
experiments/bootstrap/: bootstrap.py  run-bootstrap.sh
experiments/colour_bar/: plot_all.py  policy_output.py  policy_plot.ipynb  target_output.py  target_plot.ipynb
experiments/gaussian/: calculate_mmd.ipynb  (+4 more)
public_html/: genindex.html  index.html  pyrlmala.config.html  pyrlmala.utils.html  searchindex.js
tests/: test_agent.py  test_datastructures.py  test_env.py  test_learning.py  tmp.py
utils/: adaptive_parallel.sh
(+640 files in other folders)
