[project]
name = "pyrlmala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bridgestan>=2.5.0",
    "numpy>=2.1.3",
    "posteriordb>=0.2.0",
    "scipy>=1.14.1",
    "stable-baselines3>=2.3.2",
    "tqdm>=4.66.6",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
]
