[project]
name = "pyrlmala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bridgestan>=2.5.0",
    "coverage>=7.6.7",
    "jaxtyping>=0.2.34",
    "numpy>=2.1.3",
    "posteriordb>=0.2.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "scipy>=1.14.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
    "stable-baselines3>=2.3.2",
    "tqdm>=4.66.6",
    "wandb>=0.18.7",
    "toolz>=1.0.0",
    "pytest-mock>=3.14.0",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrlmala"]

