[project]
name = "pyrlmala"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bridgestan>=2.5.0",
    "coverage>=7.6.7",
    "numpy>=2.1.3",
    "posteriordb>=0.2.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "scipy>=1.14.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
    "stable-baselines3>=2.3.2",
    "tqdm>=4.66.6",
    "wandb>=0.18.7",
    "pytest-mock>=3.14.0",
    "sphinx-autodoc-typehints>=2.5.0",
    "myst-parser>=4.0.0",
    "sphinx-markdown-builder>=0.6.7",
    "tensorboard>=2.18.0",
    "torch-tb-profiler>=0.4.3",
    "jaxtyping>=0.2.36",
    "watchdog>=6.0.0",
    "dash>=2.18.2",
    "pandas>=2.2.3",
    "duckdb>=1.1.3",
    "pytorch-ignite>=0.5.1",
    "mcmctoolbox>=0.20.0",
    "ipywidgets>=8.1.5",
    "tomli-w>=1.1.0",
    "prettytable>=3.12.0",
    "cmdstanpy>=1.2.5",
    "xarray>=2025.1.1",
    "cytoolz>=1.0.1",
    "scikit-learn>=1.6.1",
    "mcmclib",
    "loguru>=0.7.3",
    "adaptive-mcmc>=0.1.3",
]

[dependency-groups]
dev = [
    "ipython>=8.29.0",
    "jupyter>=1.1.1",
    "pysnooper>=1.2.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrlmala"]

[tool.uv.sources]
mcmclib = { git = "https://github.com/wilson-ye-chen/mcmclib" }

